<resources>
    <string name="app_name">Notes</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_notes">Notes</string>
    <string name="note_hint">Type your note here…</string>
    <string name="title_hint">Type title…</string>
    <string name="button_save">Save</string>
    <string name="title">Title</string>
    <string name="note_text">Note text</string>
    <string name="without_title">Without title</string>
    <string name="without_text">Without content</string>
</resources>
